--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "npm": "^5.7.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-ionicons": "^2.1.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
   },
